== 0.1.7  2008-04-

* 1 minor enhancement:
  * added cache highlighting à la Google
  * rake index:update implemented as described in Ferret book by David Balmain
  * rake index:prune removes missing files from indexer.

== 0.1.6  2008-04-25

* 1 minor enhancement:
  * replaced index key by Document#probably_unique_id

* bug fixes:
  * Added forgotten public/images/flags to generator file

== 0.1.5  2008-04-25

* 1 major enhancement:
  * yet another Indexer & Index rewrite

* 1 minor enhancement:
  * flags to indicate found language

* bug fixes:
  * No more (or just less?) index lock errors

== 0.1.4  2008-04-23
* 1 minor enhancement:
  * minimal MacOS support

== 0.1.3  2008-04-20

* 1 bug fix:
  * removed verbose debug info

== 0.1.2  2008-04-20

* 3 major enhancements:
  * complete Indexer & Index rewrite
  * new DSL syntax
  * multi-threaded Indexer

== 0.1.1  2008-04-12

* 1 major enhancement:
  * cache à la Google

* minor enhancements:
  * easier configuration. Every picolena specific conf files in config/custom
  * lots of refactoring

* bug fixes

== 0.1.0  2008-04-08

* 3 minor enhancements:
  * can now be installed on win32 (doesn't pass every spec though)
  * moved rails_plugins away from lib/ so that they don't get parsed by rdoc/ri
  * shorter and prettier base26_hash id for documents

== 0.0.99  2008-04-06

* 2 minor enhancements:
  * more complete specs
  * mtime is now indexed and available in queries as "date:20080406"

== 0.0.98 2008-03-29

* 1 major enhancement:
  * Initial release