@@ -22,8 +22,9 @@ class DocumentsController < ApplicationController
   def show
     start=Time.now
       @query=[params[:id],params.delete(:format)].compact.join('.')
+      sort=params[:sort]
       page=params[:page]||1
-      finder=Finder.new(@query,page)
+      finder=Finder.new(@query,sort,page)
       finder.execute!
       pager=::Paginator.new(finder.total_hits, Picolena::ResultsPerPage) do
         finder.matching_documents
