@@ -1,9 +1,10 @@
 == 0.1.7  2008-04-
 
-* 1 minor enhancement:
+* 4 minor enhancement:
   * added cache highlighting à la Google
   * rake index:update implemented as described in Ferret book by David Balmain
   * rake index:prune removes missing files from indexer.
+  * possibility to sort results by relevance / by date
 
 == 0.1.6  2008-04-25
 
